--- a/index.qmd
+++ b/index.qmd
@@ -1,5 +1,6 @@
 ---
 title: "Lukman A. Soboyejo"
+subtitle: Environmental Manager & Scientist 
 about:
   template: trestles
   image: head_2.jpg
@@ -15,7 +16,7 @@ about:
       href: mailto:lsoboyejo@student.unimelb.edu.au
     - icon: linkedin
       text: LinkedIn
-      href: www.linkedin.com/in/soboyejo-lukman-adeboye
+      href: https://www.linkedin.com/in/l-soboyejo
     - icon: google
       text: Google Scholar
       href: https://scholar.google.com.au/citations?user=l63u3A4AAAAJ&hl=en
@@ -36,17 +37,19 @@ page-layout: full
 ---
 
 <div class="col-md-8">
+
 <h2 class="featurette-heading">
-About Me
-</h2>
+
+About Me: </h2>
+
 <p class="lead">
 
-🌍 <b>Who I Am</b> <br>I am an environmental scientist with a strong foundation in water resources, environmental assessment, and urban stream management, currently working on [predicting urban channel form and related geomorphic disturbance to urbanisation](https://findanexpert.unimelb.edu.au/scholarlywork/1947357-predicting-urban-channel-morphology-amidst-multiple-complexities?cache=1732788019141). 
+🌍 <b>Who I Am</b> <br>I am an environmental manager and scientist with a strong foundation in water resources management, environmental assessment, and urban stream management, currently working on [predicting urban channel form and related geomorphic disturbance to urbanisation](https://findanexpert.unimelb.edu.au/scholarlywork/1947357-predicting-urban-channel-morphology-amidst-multiple-complexities?cache=1732788019141).
 
-🎯 <b>What I want ?</b><br>I am always seeking an advanced role where I can apply my technical (research) expertise and project delivery experience improve water and coastal resources, as well as the health of catchments and urban waterways. 
+🎯 <b>What I want</b><br>I am always seeking an advanced role where I can apply my technical (research) expertise and project delivery experience improve water and coastal resources, as well as the health of catchments and urban waterways.
 
-💡 <b>What I believe?</b><br>I am passionate about integrating science with practice to inform sustainable and equitable environmental management. I believe in collaborative, evidence-based approaches that empower governments or councils and communities to take active ownership of their local ecosystems.
+💡 <b>What I believe</b><br>I am passionate about integrating science with practice to inform sustainable and equitable environmental management. I believe in collaborative, evidence-based approaches that empower governments or councils and communities to take active ownership of their local ecosystems.
 
-Currently a PhD researcher | Geomorphology and earth surface processes <br> [Univeristy of Melbourne](https://safes.unimelb.edu.au/research/werg), Australia 
+Currently a PhD researcher \| Geomorphology and earth surface processes <br> [Univeristy of Melbourne](https://safes.unimelb.edu.au/research/werg), Australia
 
 Thanks ! 🙏 , because you are part of the story.
