--- a/experience/index.qmd
+++ b/experience/index.qmd
@@ -10,26 +10,18 @@ title:  'Experience'
 </p>
 
 ## Industry experience
-Intern · Clust-ER Greentech Energy Sustainability, Italy  
-📅 Feb 2020 – Jul 2020  
-🌐 [greentech.clust-er.it/en](https://greentech.clust-er.it/en/)  
+Intern | Clust-ER Greentech Energy Sustainability, Italy  | Feb 2020 – Jul 2020  
+[greentech.clust-er.it/en](https://greentech.clust-er.it/en/)  
 
-
-Intern · Ogun State Water Works Corporation, Sagamu Business Area  
-📅 May 2014 – Nov 2014  
-🌐 [www.ogunwater.org.ng](https://www.ogunwater.org.ng)  
+Intern | Ogun State Water Works Corporation, Sagamu Business Area, Nigeria | May 2014 – Nov 2014  
+[www.ogunwater.org.ng](https://www.ogunwater.org.ng)  
 
 ## Teaching experience
-Graduate Teaching Assistant · Federal Polytechnic Idah, Kogi State (NYSC)  
-📅 Nov 2016 – Jan 2018
-🌐 [www.nysc.gov.ng](https://www.nysc.gov.ng)  
+Graduate Teaching Assistant | Federal Polytechnic Idah, Kogi State, Nigeria  | Nov 2016 – Jan 2018
 
-Part-time Math/Geography Tutor · Extensive Educational Consultant, Nigeria  
-📅 Mar 2016 – Aug 2016
+Part-time Math/Geography Tutor | Extensive Educational Consultant, Nigeria  | Mar 2016 – Aug 2016
 
 ## Research experience
-PhD Research Components · The University of Melbourne, Australia  
-📅 Mar 2022 – Aug 2026 
+PhD Research | The University of Melbourne, Australia  | Mar 2022 – Aug 2026 
 
-MSc Research Components · University of Bologna, Italy  
-📅 Sept 2019 – Jul 2020 
+MSc Research Component | University of Bologna, Italy  | Sept 2019 – Jul 2020 
