site_in_progress

--- a/experience/index.qmd
+++ b/experience/index.qmd
@@ -25,3 +25,5 @@ Part-time Math/Geography Tutor | Extensive Educational Consultant, Nigeria  | Ma
 PhD Research | The University of Melbourne, Australia  | Mar 2022 – Aug 2026 
 
 MSc Research Component | University of Bologna, Italy  | Sept 2019 – Jul 2020 
+
+## Volunteering experience
